# trend

./: .gitignore  CmdLine.hs  Dates.hs  Math.hs  Parser.hs  README  Types.hs  Unicode.hs  hie.yaml  stack.yaml  trend.cabal  trend.hs
src/: CmdLine.hs  Math.hs  Parser.hs  Types.hs  trend.hs
