Name:           trend
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Ilya V. Portnov
Synopsis:       Unix-style command line tool to analyze trends in numerical data.
Build-Type:     Simple

Executable trend
  Build-Depends:  base >= 3 && <= 5, utf8-string, containers, parsec >= 3 && < 4,
                  syb, mtl, time, regex-pcre, hmatrix, random, dates
  GHC-options:    -O2
  Main-Is:        trend.hs

